# score-addon-sequences

./: CMakeLists.txt  score_addon_sequence.cpp  score_addon_sequence.hpp
sequence/: CommandFactory.hpp  Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
